--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
+    "ganache-cli": "^6.12.2",
     "ipfs-http-client": "^59.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,7 +23,7 @@
     "web3": "^1.7.1"
   },
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/contracts": "^4.4.0",
     "@tailwindcss/forms": "0.4.0",
     "@truffle/hdwallet-provider": "^2.0.4",
     "assert": "^2.0.0",
